buildscript {
    ext {
        kafkaVersion = '4.0.0'
        confluentVersion = "7.9.1"
        avroVersion = '1.12.0'
    }
    repositories {
        mavenCentral()
        maven { url = "https://plugins.gradle.org/m2/" }
        maven { url = "https://packages.confluent.io/maven/" }
        gradlePluginPortal()

    }
    dependencies {
        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
        classpath "com.gradleup.shadow:shadow-gradle-plugin:8.3.6"
    }
}

plugins {
    id("io.freefair.lombok") version "8.12.1"
    id("com.gradleup.shadow") version "8.3.6"
    id("checkstyle")
    id("application")
}

application {
    mainClass = 'com.r1chjames.KafkaCli'
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: "eclipse"
apply plugin: "com.gradleup.shadow"

allprojects {
    tasks.withType(JavaCompile) {
        sourceCompatibility = '21'
        targetCompatibility = '21'
        options.compilerArgs << "-proc:full"
    }
}

checkstyle {
    configFile = file('config/checkstyle/checkstyle.xml')
}

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source = 'src/test/java'
}

wrapper {
    gradleVersion = '8.14.2'
}

tasks.named('test', Test) {
    useJUnitPlatform()

    maxHeapSize = '1G'

    testLogging {
        events "passed"
    }
}

group = "com.r1chjames"
version = "0.0.1-SNAPSHOT"

repositories {
    mavenCentral()
    maven { url = "https://packages.confluent.io/maven/" }
}

dependencies {
    implementation("org.apache.avro:avro:${avroVersion}",
            "org.apache.avro:avro-maven-plugin:${avroVersion}",
            "io.confluent:kafka-avro-serializer:${confluentVersion}",
            "io.confluent:kafka-streams-avro-serde:${confluentVersion}",
            "io.confluent:kafka-schema-registry:${confluentVersion}",
            "org.apache.kafka:kafka-clients:${kafkaVersion}",
            "info.picocli:picocli:4.7.7"
    )

    testImplementation(platform("org.junit:junit-bom:5.13.1"),
            "org.junit.jupiter:junit-jupiter",
            "org.assertj:assertj-core:4.0.0-M1",
            "org.mockito:mockito-core:5.18.0",
            "org.mockito:mockito-junit-jupiter:5.18.0")
    testRuntimeOnly("org.junit.platform:junit-platform-launcher")

}
